--- a/board_firm_staff_edit.html
+++ b/board_firm_staff_edit.html
@@ -118,59 +118,8 @@
               </div>
             </div>
 
-            <div class='boxsFull m-td-25'> <!-- box -->
-              <div class="box20">
-                <p class='t-r-15 text-l p-d-10'>電子郵件</p>
-                <div class='boxsFull p-d-15'>
-                  <div class="box19_l">
-                    <label>
-                      <input class='input-f' type="" name="" placeholder="請輸入">
-                    </label>
-                  </div>
-                  <div class="box19_r order-c">
-                    <button class="icon-remove_circle btnAdd"></button>
-                  </div>
-                </div>
-              </div>
-              <div class="box20">
-                <p class='t-r-15 text-l p-d-10'>電子郵件備註</p>
-                <div class='boxsFull p-d-15'>
-                  <div class="box19_l">
-                    <label>
-                      <input class='input-f' type="" name="" placeholder="請輸入">
-                    </label>
-                  </div>
-                </div>
-              </div>
-            </div>  
+            <div id='contacts' class='rows'>
 
-            <div class='boxsFull m-td-25'>
-              <!-- 虛線 -->
-              <i class="splitLine_bl"></i>
-
-              <div class="box20">
-                <p class='t-r-15 text-l p-d-10'>電子郵件</p>
-                <div class='boxsFull p-d-15'>
-                  <div class="box19_l">
-                    <label>
-                      <input class='input-f' type="" name="" placeholder="請輸入">
-                    </label>
-                  </div>
-                  <div class="box19_r order-c">
-                    <button class="icon-add_circle btnAdd"></button>
-                  </div>
-                </div>
-              </div>
-              <div class="box20">
-                <p class='t-r-15 text-l p-d-10'>電子郵件備註</p>
-                <div class='boxsFull p-d-15'>
-                  <div class="box19_l">
-                    <label>
-                      <input class='input-f' type="" name="" placeholder="請輸入">
-                    </label>
-                  </div>
-                </div>
-              </div>
             </div>
 
             
