--- a/board_product_edit.html
+++ b/board_product_edit.html
@@ -160,104 +160,10 @@
             <!-- 供應商聯絡人 -->
             <div class='boxsFull m-t-25'>
               <p class="t-blue-20">供應商聯絡人</p>
-              <a class='btn-outline-blue icon-add order-r' href="board_product_edit.html">&nbsp;新增供應商</a>
-            </div>
-            <div class='boxsFull m-td-25'>
-              <div class='boxs30'>
-                <p class='t-r-15 text-l p-d-10'>廠商類別</p>
-                <div class="select-style">
-                  <select>
-                    <option value="">請選擇</option>
-                    <option value="">類別01</option>
-                    <option value="">類別02</option>
-                    <option value="">類別03</option>
-                  </select>
-                </div>
-              </div>
-            </div>
-            <div class='boxsFull m-td-25'>
-              <div class="box37_l">
-                <p class='t-r-15 text-l p-d-10'>供應商</p>
-                <div class="select-style">
-                  <select>
-                    <option value="">請選擇</option>
-                    <option value="">類別01</option>
-                    <option value="">類別02</option>
-                    <option value="">類別03</option>
-                  </select>
-                </div>
-              </div>
-              <div class="box37_r">
-                <div class='boxsFull'>
-                  <p class='t-r-15 text-l p-d-10'>供應商聯絡人</p>
-                  <div class="box19_l">
-                    <div class="select-style">
-                      <select>
-                        <option value="">請選擇</option>
-                        <option value="">類別01</option>
-                        <option value="">類別02</option>
-                        <option value="">類別03</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="box19_r">
-                    <button class="icon-add_circle"></button>
-                  </div>
-                </div>
-              </div>
+              <a class='btn-outline-blue icon-add order-r' id="create-vendor">&nbsp;新增供應商</a>
             </div>
 
-            
-            <div class='boxsFull'>
-              <!-- 虛線 -->
-              <i class="splitLine_bl"></i>
-
-              <!-- 按下新增聯絡人案件後產生的區域 -->
-              <div class='boxsFull m-td-25'>
-                <div class='boxs30'>
-                  <p class='t-r-15 text-l p-d-10'>廠商類別</p>
-                  <div class="select-style">
-                    <select>
-                      <option value="">請選擇</option>
-                      <option value="">類別01</option>
-                      <option value="">類別02</option>
-                      <option value="">類別03</option>
-                    </select>
-                  </div>
-                </div>
-              </div>
-              <div class='boxsFull m-td-25'>
-                <div class="box37_l">
-                  <p class='t-r-15 text-l p-d-10'>供應商</p>
-                  <div class="select-style">
-                    <select>
-                      <option value="">請選擇</option>
-                      <option value="">類別01</option>
-                      <option value="">類別02</option>
-                      <option value="">類別03</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="box37_r">
-                  <div class='boxsFull'>
-                    <p class='t-r-15 text-l p-d-10'>供應商聯絡人</p>
-                    <div class="box19_l">
-                      <div class="select-style">
-                        <select>
-                          <option value="">請選擇</option>
-                          <option value="">類別01</option>
-                          <option value="">類別02</option>
-                          <option value="">類別03</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="box19_r">
-                      <button class="icon-add_circle"></button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div id='vendors'></div>
 
             
             <div class='boxsFull m-td-25'>
