--- a/board_product_edit.html
+++ b/board_product_edit.html
@@ -137,14 +137,17 @@
               <p class='t-r-15 text-l p-d-10'>產品照片</p>
               <div class='updateBox'>
                 <div class="box82_l">
-                  <div class='boxsFull m-d-10'>
-                    <img src="img/file_icon.svg">
-                    <p class="t-file">Hikoot_Clien_Pitch_V2.pdf</p>
-                    <button class="icon-cancel"></button>
+                  <div class='boxsFull m-d-10 one-file'>
+                    <input type='file' id='file'>
+                    <div class='cover'>
+                      <img src="img/file_icon.svg">
+                      <p class="t-file name">Hikoot_Clien_Pitch_V2.pdf</p>
+                      <button class="icon-cancel cancel"></button>
+                    </div>
                   </div>
                 </div>
                 <div class="box82_r">
-                  <button class='btn-outline-blue outlineNobg icon-add order-r'>&nbsp;新增檔案</button>
+                  <label class='btn-outline-blue outlineNobg icon-add order-r' for='file'>&nbsp;新增檔案</label>
                 </div>
               </div>
             </div>
