--- a/board_price_edit.html
+++ b/board_price_edit.html
@@ -190,25 +190,9 @@
                   <p class='t-r-15 boxsInline order-l p-d-10'>產品照片</p>
                   <p class='t-file-g boxsInline order-r p-d-10'>備註：附欓限制：最多五個檔案，總容量限制為2MB</p>
                   <div class='updateBox'>
-                    <div class="box82_l">
-                      <div class='boxsFull m-d-10'>
-                        <img src="img/file_icon.svg">
-                        <p class="t-file">Hikoot_Clien_Pitch_V2.pdf</p>
-                        <button class="icon-cancel"></button>
-                      </div>
-                      <div class='boxsFull m-d-10'>
-                        <img src="img/file_icon.svg">
-                        <p class="t-file">Hikoot_Clien_Pitch_V2.pdf</p>
-                        <button class="icon-cancel"></button>
-                      </div>
-                      <div class='boxsFull'>
-                        <img src="img/file_icon.svg">
-                        <p class="t-file">Hikoot_Clien_Pitch_V2.pdf</p>
-                        <button class="icon-cancel"></button>
-                      </div>
-                    </div>
+                    <div class="box82_l"></div>
                     <div class="box82_r">
-                      <button class='btn-outline-blue outlineNobg icon-add order-r'>&nbsp;新增檔案</button>
+                      <button class='btn-outline-blue outlineNobg icon-add order-r createFile'>&nbsp;新增檔案</button>
                     </div>
                   </div>
                 </div>
