--- a/board_price_edit.html
+++ b/board_price_edit.html
@@ -223,130 +223,130 @@
                 <div class="price_boxsC">
                   <button class='btn-half-blue icon-icon03 wF'>&nbsp;品項清單</button>
                   <div class="search-container m-d-25">
-                    <form action="">
+                    <div class='boxsInline'>
                       <input class='price_search' type="text" placeholder="產品搜尋" name="search">
                       <button class='searchBtn price_icon' type="submit"><i class="icon-search"></i></button>
-                    </form>
+                    </div>
                   </div>
                   <div class='chooseBox'>
                     <!-- 01 -->
                     <div class='boxsFull m-d-10'>
-                      <form class='boxsInline'>
+                      <div class='boxsInline'>
                         <input class='chooseCheck' type="checkbox" id="" name="" value="">
                         <label class='t-b-13' for="">產品名稱產品名稱產產品名稱</label><br>
-                      </form>
+                      </div>
                       <button class='iconLink linkGrey icon-camera'></button>
                     </div>
                     <!-- 02 -->
                     <div class='boxsFull m-d-10'>
-                      <form class='boxsInline'>
+                      <div class='boxsInline'>
                         <input class='chooseCheck' type="checkbox" id="" name="" value="">
                         <label class='t-b-13' for="">產品名稱產品名稱產產品名稱</label><br>
-                      </form>
+                      </div>
                       <button class='iconLink linkGrey icon-camera'></button>
                     </div>
                     <!-- 03 -->
                     <div class='boxsFull m-d-10'>
-                      <form class='boxsInline'>
+                      <div class='boxsInline'>
                         <input class='chooseCheck' type="checkbox" id="" name="" value="">
                         <label class='t-b-13' for="">產品名稱產品名稱產產品名稱</label><br>
-                      </form>
+                      </div>
                       <button class='iconLink linkGrey icon-camera'></button>
                     </div>
                     <!-- 04 -->
                     <div class='boxsFull m-d-10'>
-                      <form class='boxsInline'>
+                      <div class='boxsInline'>
                         <input class='chooseCheck' type="checkbox" id="" name="" value="">
                         <label class='t-b-13' for="">產品名稱產品名稱產產品名稱</label><br>
-                      </form>
+                      </div>
                       <button class='iconLink linkGrey icon-camera'></button>
                     </div>
                     <!-- 05 -->
                     <div class='boxsFull m-d-10'>
-                      <form class='boxsInline'>
+                      <div class='boxsInline'>
                         <input class='chooseCheck' type="checkbox" id="" name="" value="">
                         <label class='t-b-13' for="">產品名稱產品名稱產產品名稱</label><br>
-                      </form>
+                      </div>
                       <button class='iconLink linkGrey icon-camera'></button>
                     </div>
                     <!-- 06 -->
                     <div class='boxsFull m-d-10'>
-                      <form class='boxsInline'>
+                      <div class='boxsInline'>
                         <input class='chooseCheck' type="checkbox" id="" name="" value="">
                         <label class='t-b-13' for="">產品名稱產品名稱產產品名稱</label><br>
-                      </form>
+                      </div>
                       <button class='iconLink linkGrey icon-camera'></button>
                     </div>
                     <!-- 07 -->
                     <div class='boxsFull m-d-10'>
-                      <form class='boxsInline'>
+                      <div class='boxsInline'>
                         <input class='chooseCheck' type="checkbox" id="" name="" value="">
                         <label class='t-b-13' for="">產品名稱產品名稱產產品名稱</label><br>
-                      </form>
+                      </div>
                       <button class='iconLink linkGrey icon-camera'></button>
                     </div>
                     <!-- 08 -->
                     <div class='boxsFull m-d-10'>
-                      <form class='boxsInline'>
+                      <div class='boxsInline'>
                         <input class='chooseCheck' type="checkbox" id="" name="" value="">
                         <label class='t-b-13' for="">產品名稱產品名稱產產品名稱</label><br>
-                      </form>
+                      </div>
                       <button class='iconLink linkGrey icon-camera'></button>
                     </div>
                     <!-- 09 -->
                     <div class='boxsFull m-d-10'>
-                      <form class='boxsInline'>
+                      <div class='boxsInline'>
                         <input class='chooseCheck' type="checkbox" id="" name="" value="">
                         <label class='t-b-13' for="">產品名稱產品名稱產產品名稱</label><br>
-                      </form>
+                      </div>
                       <button class='iconLink linkGrey icon-camera'></button>
                     </div>
                     <!-- 10 -->
                     <div class='boxsFull m-d-10'>
-                      <form class='boxsInline'>
+                      <div class='boxsInline'>
                         <input class='chooseCheck' type="checkbox" id="" name="" value="">
                         <label class='t-b-13' for="">產品名稱產品名稱產產品名稱</label><br>
-                      </form>
+                      </div>
                       <button class='iconLink linkGrey icon-camera'></button>
                     </div>
                     <!-- 11 -->
                     <div class='boxsFull m-d-10'>
-                      <form class='boxsInline'>
+                      <div class='boxsInline'>
                         <input class='chooseCheck' type="checkbox" id="" name="" value="">
                         <label class='t-b-13' for="">產品名稱產品名稱產產品名稱</label><br>
-                      </form>
+                      </div>
                       <button class='iconLink linkGrey icon-camera'></button>
                     </div>
                     <!-- 12 -->
                     <div class='boxsFull m-d-10'>
-                      <form class='boxsInline'>
+                      <div class='boxsInline'>
                         <input class='chooseCheck' type="checkbox" id="" name="" value="">
                         <label class='t-b-13' for="">產品名稱產品名稱產產品名稱</label><br>
-                      </form>
+                      </div>
                       <button class='iconLink linkGrey icon-camera'></button>
                     </div>
                     <!-- 13 -->
                     <div class='boxsFull m-d-10'>
-                      <form class='boxsInline'>
+                      <div class='boxsInline'>
                         <input class='chooseCheck' type="checkbox" id="" name="" value="">
                         <label class='t-b-13' for="">產品名稱產品名稱產產品名稱</label><br>
-                      </form>
+                      </div>
                       <button class='iconLink linkGrey icon-camera'></button>
                     </div>
                     <!-- 14 -->
                     <div class='boxsFull m-d-10'>
-                      <form class='boxsInline'>
+                      <div class='boxsInline'>
                         <input class='chooseCheck' type="checkbox" id="" name="" value="">
                         <label class='t-b-13' for="">產品名稱產品名稱產產品名稱</label><br>
-                      </form>
+                      </div>
                       <button class='iconLink linkGrey icon-camera'></button>
                     </div>
                     <!-- 15 -->
                     <div class='boxsFull m-d-10'>
-                      <form class='boxsInline'>
+                      <div class='boxsInline'>
                         <input class='chooseCheck' type="checkbox" id="" name="" value="">
                         <label class='t-b-13' for="">產品名稱產品名稱產產品名稱</label><br>
-                      </form>
+                      </div>
                       <button class='iconLink linkGrey icon-camera'></button>
                     </div>
                   </div>
