--- a/board_price_edit2.html
+++ b/board_price_edit2.html
@@ -723,6 +723,13 @@
           <!-- 實線 -->
           <i class='splitLine_title'></i>
 
+          <div class="boxsFull search-container searchNotMT m-d-25">
+            <div class='boxsFull'>
+              <input class='price_search90' type="text" placeholder="搜尋" name="search">
+              <button class='searchBtn price_icon' type="submit"><i class="icon-search"></i></button>
+            </div>
+          </div>
+
           <div class='boxsFull m-d-10 over700'>
             <!-- 01 -->
             <div class='boxsFull text-l'>
@@ -871,6 +878,13 @@
 
           <!-- 實線 -->
           <i class='splitLine_title'></i>
+
+          <div class="boxsFull search-container searchNotMT m-d-25">
+            <div class='boxsFull'>
+              <input class='price_search90' type="text" placeholder="搜尋" name="search">
+              <button class='searchBtn price_icon' type="submit"><i class="icon-search"></i></button>
+            </div>
+          </div>
 
           <div class='boxsFull m-d-10 over700'>
             <!-- 01 -->
