修改採購取件/筆記/成交按鈕

--- a/board_purchase_edit.html
+++ b/board_purchase_edit.html
@@ -94,91 +94,117 @@
         <div class='block-r'>
           <div class='centBoxs centNoW'>
             <div class="centBoxRL">
-              <div class="boxsWhite m-d-25">
-                <div class='boxsFull m-d-25'>
-                  <div class='box37_r re37_r'>
-                    <p class='t-blue-16'>詢價編號：JB213412093u324</p>
-                    <!-- <button class='iconLink linkGrey icon-content_copy m-l-10'></button> -->
+              <!-- 0413。新增 -->
+              <div class='boxsFull m-d-25'>
+                <div class="boxsWhite2">
+                  <div class='boxsFull m-d-25'>
+                    <div class='box37_r re37_r'>
+                      <p class='t-blue-16'>詢價編號：JB213412093u324</p>
+                      <!-- <button class='iconLink linkGrey icon-content_copy m-l-10'></button> -->
+                    </div>
+                    <div class='box37_l'>
+                      <div class='boxsFull'>
+                        <span class='t-info icon-info order-r' title='定義提示說明大單的意思'></span>
+                        <!-- <div class="info_btn ">
+                          <div class="info_hover">test<div>
+                        </div> -->
+                        <label class='order-r'>
+                          <input type="checkbox" name="" id="" class="checkbox">
+                          <span class="btn-box">
+                            <span class="btn"></span>      
+                          </span>
+                          <span class="t-b-13-nw m-l-10">大單</span>
+                        </label>
+                      </div>
+                    </div>
                   </div>
-                  <div class='box37_l'>
-                    <div class='boxsFull'>
-                      <span class='t-info icon-info order-r' title='定義提示說明大單的意思'></span>
-                      <!-- <div class="info_btn ">
-                        <div class="info_hover">test<div>
-                      </div> -->
-                      <label class='order-r'>
-                        <input type="checkbox" name="" id="" class="checkbox">
-                        <span class="btn-box">
-                          <span class="btn"></span>      
-                        </span>
-                        <span class="t-b-13-nw m-l-10">大單</span>
+
+                  <div class='boxsFull m-d-25'>
+                    <div class='box50'>
+                      <p class='t-r-15 text-l p-d-10'>客戶簡碼：</p>
+                      <p class='t-grey-15 text-l p-d-10'>POFI(歐洲芬蘭) 綠標</p>
+                    </div>
+                    <div class='box50'>
+                      <p class='t-r-15 text-l p-d-10'>詢價時間：</p>
+                      <p class='t-grey-15 text-l p-d-10'>2021.01.05 17:45:29</p>
+                    </div>
+                  </div>
+
+                  <div class='boxsFull m-d-25'>
+                    <div class='box50'>
+                      <p class='t-r-15 text-l p-d-10'>負責業務：</p>
+                      <p class='t-grey-15 text-l p-d-10'>王小明 (#333)</p>
+                    </div>
+                    <div class='box50'>
+                      <p class='t-r-15 text-l p-d-10'>所屬單位：</p>
+                      <p class='t-grey-15 text-l p-d-10'>程炬企業有限公司 / 業務單位 / 業一處 / 業三課 /</p>
+                    </div>
+                  </div>
+
+                  <div class='boxsFull'>
+                    <div class='box37_r re37_r'>
+                      <p class='t-r-15 text-l p-d-10'>詢價主旨</p>
+                      <label>
+                        <input class='input-f' type="" name="" placeholder="請輸入">
                       </label>
+                    </div>
+                    <div class='box37_l'>
+                      <p class='t-r-15 text-l p-d-10'>&nbsp;</p>
+                      <div class='btn-half-red wF'>尚未指定廠商</div>
+                    </div>
+                  </div>
+
+                  <!-- 虛線 -->
+                  <i class="splitLine_bl"></i>
+
+                  <div class='boxsFull m-d-25'>
+                    <button class='btn-half-blue icon-comments order-r'>&nbsp;選擇片語範本</button>
+                  </div>
+
+                  <div class='boxsFull m-d-25'>
+                    <p class='t-r-15 text-l p-d-10'>郵件內文：</p>
+                    <p class='t-r-15'>這個區塊放文字編輯器</p>
+                  </div>
+
+                  <div class='boxsFull m-d-25'>
+                    <p class='t-r-15 boxsInline order-l p-d-10'>產品照片</p>
+                    <div class='updateBox'>
+                      <div class="box82_l">
+                        <div class='boxsFull m-d-10'>
+                          <img src="img/file_icon.svg">
+                          <p class="t-file">Hikoot_Clien_Pitch_V2.pdf</p>
+                        </div>
+                      </div>
+                      <div class="box82_r">
+                        <button class='iconLink linkGrey icon-eye order-r'></button>
+                      </div>
                     </div>
                   </div>
                 </div>
-
-                <div class='boxsFull m-d-25'>
-                  <div class='box50'>
-                    <p class='t-r-15 text-l p-d-10'>客戶簡碼：</p>
-                    <p class='t-grey-15 text-l p-d-10'>POFI(歐洲芬蘭) 綠標</p>
+                <div class='boxsWhite3'>
+                  <div class='boxsFull'>
+                    <p class='t-blue-16 m-d-25'>採購筆記</p>
+                    <div class="search-container s100 searchNotMT m-d-25">
+                      <div class='boxsFull'>
+                        <input class='price_search' type="text" placeholder="產品搜尋" name="search">
+                        <button class='searchBtn price_icon' type="submit"><i class="icon-search"></i></button>
+                      </div>
+                    </div>
                   </div>
-                  <div class='box50'>
-                    <p class='t-r-15 text-l p-d-10'>詢價時間：</p>
-                    <p class='t-grey-15 text-l p-d-10'>2021.01.05 17:45:29</p>
-                  </div>
-                </div>
-
-                <div class='boxsFull m-d-25'>
-                  <div class='box50'>
-                    <p class='t-r-15 text-l p-d-10'>負責業務：</p>
-                    <p class='t-grey-15 text-l p-d-10'>王小明 (#333)</p>
-                  </div>
-                  <div class='box50'>
-                    <p class='t-r-15 text-l p-d-10'>所屬單位：</p>
-                    <p class='t-grey-15 text-l p-d-10'>程炬企業有限公司 / 業務單位 / 業一處 / 業三課 /</p>
-                  </div>
-                </div>
-
-                <div class='boxsFull'>
-                  <div class='box37_r re37_r'>
-                    <p class='t-r-15 text-l p-d-10'>詢價主旨</p>
+                  <div class='boxsFull m-d-25'>
+                    <p class='t-r-15 text-l p-d-10'>主旨</p>
                     <label>
                       <input class='input-f' type="" name="" placeholder="請輸入">
                     </label>
                   </div>
-                  <div class='box37_l'>
-                    <p class='t-r-15 text-l p-d-10'>&nbsp;</p>
-                    <div class='btn-half-red wF'>尚未指定廠商</div>
+                  <div class='boxsFull m-d-25'>
+                    <p class='t-r-15 text-l p-d-10'>內容</p>
+                    <textarea class='input-f' name="mytext" rows="19" cols="40" placeholder="請輸入" required></textarea>
                   </div>
-                </div>
-
-                <!-- 虛線 -->
-                <i class="splitLine_bl"></i>
-
-                <div class='boxsFull m-d-25'>
-                  <button class='btn-half-blue icon-comments order-r'>&nbsp;選擇片語範本</button>
-                </div>
-
-                <div class='boxsFull m-d-25'>
-                  <p class='t-r-15 text-l p-d-10'>郵件內文：</p>
-                  <p class='t-r-15'>這個區塊放文字編輯器</p>
-                </div>
-
-                <div class='boxsFull m-d-25'>
-                  <p class='t-r-15 boxsInline order-l p-d-10'>產品照片</p>
-                  <div class='updateBox'>
-                    <div class="box82_l">
-                      <div class='boxsFull m-d-10'>
-                        <img src="img/file_icon.svg">
-                        <p class="t-file">Hikoot_Clien_Pitch_V2.pdf</p>
-                      </div>
-                    </div>
-                    <div class="box82_r">
-                      <button class='iconLink linkGrey icon-eye order-r'></button>
-                    </div>
-                  </div>
+                  <button class='boxsFull btn-half-blue'>儲 存</button>
                 </div>
               </div>
+              <!-- 0413。結束 -->
 
               <div class="boxsWhite">
                 <p class="t-blue-15 m-d-10">客戶備註：</p>
@@ -198,7 +224,7 @@
                   </select>
                 </div>
                 </br>
-                <button class='btn-half-blueG2 wF m-d-15'>採購筆記</button>
+                <button class='btn-half-blueG2 wF m-d-15 note-ok'>採購筆記</button>
                 <button class='btn-half-blueG2 wF'>回覆業務報價</button>
               </div>
 
@@ -206,6 +232,26 @@
               <div class="boxsFull m-d-10">
                 <div class="price_boxs">選擇商品</div>
                 <div class="price_boxsC">
+
+                  <!-- 0413新增。開始 -->
+                  <div class='boxsYellow by2 m-d-10'>
+                    <div class='t-b-13-nw b8'>產品名稱產品名稱產產品名稱</div>
+                    <button class='iconLink linkGrey icon-camera'></button>
+                  </div>
+                  <div class='boxsYellow by2 m-d-10'>
+                    <div class='t-b-13-nw b8'>產品名稱產品名稱產產品名稱</div>
+                    <button class='iconLink linkGrey icon-camera'></button>
+                  </div>
+                  <div class='boxsYellow by2 m-d-10'>
+                    <div class='t-b-13-nw b8'>產品名稱產品名稱產產品名稱</div>
+                    <button class='iconLink linkGrey icon-camera'></button>
+                  </div>
+                  <div class='boxsYellow by2 m-d-25'>
+                    <div class='t-b-13-nw b8'>產品名稱產品名稱產產品名稱</div>
+                    <button class='iconLink linkGrey icon-camera'></button>
+                  </div>
+                  <!-- 0413新增。結束 -->
+
                   <button class='btn-half-blue icon-icon03 wF'>&nbsp;品項清單</button>
                   <div class="search-container m-d-25">
                     <div class='boxsInline'>
@@ -343,6 +389,21 @@
               <div class="boxsFull">
                 <div class="price_boxs">媒合廠商</div>
                 <div class="price_boxsC">
+                  <!-- 0413新增。開始 -->
+                  <div class='boxsYellow by2 m-d-10'>
+                    <div class='t-b-13-nw'>中山灌瑞王先生；TEL(02)2223-1234；MOB：0912345678</div>
+                  </div>
+                  <div class='boxsYellow by2 m-d-10'>
+                    <div class='t-b-13-nw'>中山灌瑞王先生；TEL(02)2223-1234；MOB：0912345678</div>
+                  </div>
+                  <div class='boxsYellow by2 m-d-10'>
+                    <div class='t-b-13-nw'>中山灌瑞王先生；TEL(02)2223-1234；MOB：0912345678</div>
+                  </div>
+                  <div class='boxsYellow by2 m-d-25'>
+                    <div class='t-b-13-nw'>中山灌瑞王先生；TEL(02)2223-1234；MOB：0912345678</div>
+                  </div>
+                  <!-- 0413新增。結束 -->
+
                   <div class="search-container searchNotMT m-d-25">
                     <div action="">
                       <input class='price_search' type="text" placeholder="產品搜尋" name="search">
