修改回覆業務＋採購筆記

--- a/old/board_purchase_edit.html
+++ b/old/board_purchase_edit.html
@@ -224,50 +224,12 @@
                   </select>
                 </div>
                 </br>
-                <!-- <button class='btn-half-blueG2 wF m-d-15 note-ok'>採購筆記</button> -->
+                <button class='btn-half-blueG2 wF m-d-15 note-ok'>採購筆記</button>
                 <button class='btn-half-blueG2 wF showModel' data-id='1'>回覆業務報價</button>
               </div>
 
-              <!-- 4/22。新增 -->
-              <div class="boxsFull saleok btn-half-blueG2">採購筆記</div>
-              <div class='boxok'>
-                <div class='boxsFull m-d-25'>
-                  <p class='t-r-15 text-l p-d-10'>客戶簡碼</p>
-                  <label>
-                    <input class='input-f' type="" name="" placeholder="不接受中文">
-                  </label>
-                </div>
-
-                <div class='boxsFull m-d-25'>
-                  <p class='t-r-15 text-l p-d-10'>採購類別</p>
-                  <div class="select-style">
-                    <select>
-                      <option value="">請選擇</option>
-                      <option value="">所屬單位01</option>
-                      <option value="">所屬單位02</option>
-                      <option value="">所屬單位03</option>
-                    </select>
-                  </div>
-                </div>
-
-                <div class='boxsFull m-d-25'>
-                  <p class='t-r-15 text-l p-d-10'>新增筆記</p>
-                  <textarea class='input-f' name="mytext" rows="6" cols="40" placeholder="請輸入" required></textarea>
-                </div>
-
-                <div class='boxsFull m-d-25'>
-                  <p class='t-r-15 text-l p-d-10'>筆記內容</p>
-                  <textarea class='input-f' name="mytext" rows="6" cols="40" placeholder="請輸入" required></textarea>
-                </div>
-
-                <div class="boxsFull">
-                  <button class='btn-half-blue wF'>&nbsp;確定</button>
-                </div>
-              </div>
-              <!-- 4/22。結束 -->
-
               <!-- 選擇商品 -->
-              <div class="boxsFull m-t-25 m-d-10">
+              <div class="boxsFull m-d-10">
                 <div class="price_boxs">選擇商品</div>
                 <div class="price_boxsC">
 
