0714更新，卻橫向捲軸

--- a/board_price_list.html
+++ b/board_price_list.html
@@ -221,144 +221,144 @@
 
             <!-- 頁籤。待處理 -->
             <div class="order_info order_info_show">
-              <div class='boxsFull'>
+              <div class='boxsFull over1335'>
                 <div class='table-header'>
-                  <p class='table-box20'>詢價編號</p>
-                  <p class='table-box10'>詢價人員</p>
-                  <p class='table-box10'>報價人員</p>
-                  <p class='table-box10'>客&nbsp;戶</p>
-                  <p class='table-box20'>詢價主旨</p>
-                  <p class='table-box10'>詢價件數</p>
-                  <p class='table-box10'>大單</p>
-                  <p class='table-box10'>&nbsp;</p>
+                  <p class='table-box15'>詢價編號</p>
+                  <p class='table-box05'>詢價</br>人員</p>
+                  <p class='table-box05'>報價</br>人員</p>
+                  <p class='table-box05'>客&nbsp;戶</p>
+                  <p class='table-box55'>詢價主旨</p>
+                  <p class='table-box05'>詢價</br>件數</p>
+                  <p class='table-box05'>大單</p>
+                  <p class='table-box05'>&nbsp;</p>
                 </div>
                 <!-- 01 -->
                 <div class='table-body'>
-                  <p class='table-box20'>JB213412093u324</p>
-                  <p class='table-box10'>王小明</p>
-                  <p class='table-box10'>李彬彬</p>
-                  <p class='table-box10'>TKK</p>
-                  <p class='table-box20 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
-                  <p class='table-box10'>2</p>
-                  <p class='table-box10 t-red'>大單</p>
-                  <p class='table-box10'>
+                  <p class='table-box15'>JB213412093u324</p>
+                  <p class='table-box05'>王小明</p>
+                  <p class='table-box05'>李彬彬</p>
+                  <p class='table-box05'>TKK</p>
+                  <p class='table-box55 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
+                  <p class='table-box05'>2</p>
+                  <p class='table-box05 t-red'>大單</p>
+                  <p class='table-box05'>
                     <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
                   </p>
                 </div>
                 <!-- 02 -->
                 <div class='table-body'>
-                  <p class='table-box20'>JB213412093u324</p>
-                  <p class='table-box10'>王小明</p>
-                  <p class='table-box10'>李彬彬</p>
-                  <p class='table-box10'>TKK</p>
-                  <p class='table-box20 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
-                  <p class='table-box10'>2</p>
-                  <p class='table-box10 t-red'>大單</p>
-                  <p class='table-box10'>
+                  <p class='table-box15'>JB213412093u324</p>
+                  <p class='table-box05'>王小明</p>
+                  <p class='table-box05'>李彬彬</p>
+                  <p class='table-box05'>TKK</p>
+                  <p class='table-box55 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
+                  <p class='table-box05'>2</p>
+                  <p class='table-box05 t-red'>大單</p>
+                  <p class='table-box05'>
                     <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
                   </p>
                 </div>
                 <!-- 03 -->
                 <div class='table-body'>
-                  <p class='table-box20'>JB213412093u324</p>
-                  <p class='table-box10'>王小明</p>
-                  <p class='table-box10'>李彬彬</p>
-                  <p class='table-box10'>TKK</p>
-                  <p class='table-box20 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
-                  <p class='table-box10'>2</p>
-                  <p class='table-box10 t-red'>&nbsp;</p>
-                  <p class='table-box10'>
+                  <p class='table-box15'>JB213412093u324</p>
+                  <p class='table-box05'>王小明</p>
+                  <p class='table-box05'>李彬彬</p>
+                  <p class='table-box05'>TKK</p>
+                  <p class='table-box55 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
+                  <p class='table-box05'>2</p>
+                  <p class='table-box05 t-red'>&nbsp;</p>
+                  <p class='table-box05'>
                     <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
                   </p>
                 </div>
                 <!-- 04 -->
                 <div class='table-body'>
-                  <p class='table-box20'>JB213412093u324</p>
-                  <p class='table-box10'>王小明</p>
-                  <p class='table-box10'>李彬彬</p>
-                  <p class='table-box10'>TKK</p>
-                  <p class='table-box20 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
-                  <p class='table-box10'>2</p>
-                  <p class='table-box10 t-red'>&nbsp;</p>
-                  <p class='table-box10'>
+                  <p class='table-box15'>JB213412093u324</p>
+                  <p class='table-box05'>王小明</p>
+                  <p class='table-box05'>李彬彬</p>
+                  <p class='table-box05'>TKK</p>
+                  <p class='table-box55 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
+                  <p class='table-box05'>2</p>
+                  <p class='table-box05 t-red'>&nbsp;</p>
+                  <p class='table-box05'>
                     <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
                   </p>
                 </div>
                 <!-- 05 -->
                 <div class='table-body'>
-                  <p class='table-box20'>JB213412093u324</p>
-                  <p class='table-box10'>王小明</p>
-                  <p class='table-box10'>李彬彬</p>
-                  <p class='table-box10'>TKK</p>
-                  <p class='table-box20 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
-                  <p class='table-box10'>2</p>
-                  <p class='table-box10 t-red'>大單</p>
-                  <p class='table-box10'>
+                  <p class='table-box15'>JB213412093u324</p>
+                  <p class='table-box05'>王小明</p>
+                  <p class='table-box05'>李彬彬</p>
+                  <p class='table-box05'>TKK</p>
+                  <p class='table-box55 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
+                  <p class='table-box05'>2</p>
+                  <p class='table-box05 t-red'>大單</p>
+                  <p class='table-box05'>
                     <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
                   </p>
                 </div>
                 <!-- 06 -->
                 <div class='table-body'>
-                  <p class='table-box20'>JB213412093u324</p>
-                  <p class='table-box10'>王小明</p>
-                  <p class='table-box10'>李彬彬</p>
-                  <p class='table-box10'>TKK</p>
-                  <p class='table-box20 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
-                  <p class='table-box10'>2</p>
-                  <p class='table-box10 t-red'>&nbsp;</p>
-                  <p class='table-box10'>
+                  <p class='table-box15'>JB213412093u324</p>
+                  <p class='table-box05'>王小明</p>
+                  <p class='table-box05'>李彬彬</p>
+                  <p class='table-box05'>TKK</p>
+                  <p class='table-box55 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
+                  <p class='table-box05'>2</p>
+                  <p class='table-box05 t-red'>&nbsp;</p>
+                  <p class='table-box05'>
                     <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
                   </p>
                 </div>
                 <!-- 07 -->
                 <div class='table-body'>
-                  <p class='table-box20'>JB213412093u324</p>
-                  <p class='table-box10'>王小明</p>
-                  <p class='table-box10'>李彬彬</p>
-                  <p class='table-box10'>TKK</p>
-                  <p class='table-box20 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
-                  <p class='table-box10'>2</p>
-                  <p class='table-box10 t-red'>大單</p>
-                  <p class='table-box10'>
+                  <p class='table-box15'>JB213412093u324</p>
+                  <p class='table-box05'>王小明</p>
+                  <p class='table-box05'>李彬彬</p>
+                  <p class='table-box05'>TKK</p>
+                  <p class='table-box55 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
+                  <p class='table-box05'>2</p>
+                  <p class='table-box05 t-red'>大單</p>
+                  <p class='table-box05'>
                     <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
                   </p>
                 </div>
                 <!-- 08 -->
                 <div class='table-body'>
-                  <p class='table-box20'>JB213412093u324</p>
-                  <p class='table-box10'>王小明</p>
-                  <p class='table-box10'>李彬彬</p>
-                  <p class='table-box10'>TKK</p>
-                  <p class='table-box20 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
-                  <p class='table-box10'>2</p>
-                  <p class='table-box10 t-red'>大單</p>
-                  <p class='table-box10'>
+                  <p class='table-box15'>JB213412093u324</p>
+                  <p class='table-box05'>王小明</p>
+                  <p class='table-box05'>李彬彬</p>
+                  <p class='table-box05'>TKK</p>
+                  <p class='table-box55 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
+                  <p class='table-box05'>2</p>
+                  <p class='table-box05 t-red'>大單</p>
+                  <p class='table-box05'>
                     <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
                   </p>
                 </div>
                 <!-- 09 -->
                 <div class='table-body'>
-                  <p class='table-box20'>JB213412093u324</p>
-                  <p class='table-box10'>王小明</p>
-                  <p class='table-box10'>李彬彬</p>
-                  <p class='table-box10'>TKK</p>
-                  <p class='table-box20 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
-                  <p class='table-box10'>2</p>
-                  <p class='table-box10 t-red'>大單</p>
-                  <p class='table-box10'>
+                  <p class='table-box15'>JB213412093u324</p>
+                  <p class='table-box05'>王小明</p>
+                  <p class='table-box05'>李彬彬</p>
+                  <p class='table-box05'>TKK</p>
+                  <p class='table-box55 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
+                  <p class='table-box05'>2</p>
+                  <p class='table-box05 t-red'>大單</p>
+                  <p class='table-box05'>
                     <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
                   </p>
                 </div>
                 <!-- 10 -->
                 <div class='table-body'>
-                  <p class='table-box20'>JB213412093u324</p>
-                  <p class='table-box10'>王小明</p>
-                  <p class='table-box10'>李彬彬</p>
-                  <p class='table-box10'>TKK</p>
-                  <p class='table-box20 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
-                  <p class='table-box10'>2</p>
-                  <p class='table-box10 t-red'>&nbsp;</p>
-                  <p class='table-box10'>
+                  <p class='table-box15'>JB213412093u324</p>
+                  <p class='table-box05'>王小明</p>
+                  <p class='table-box05'>李彬彬</p>
+                  <p class='table-box05'>TKK</p>
+                  <p class='table-box55 text-l'>ooxx公司 - 獎牌製作詢價獎牌製作詢價獎牌製作詢價</p>
+                  <p class='table-box05'>2</p>
+                  <p class='table-box05 t-red'>&nbsp;</p>
+                  <p class='table-box05'>
                     <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
                   </p>
                 </div>
