--- a/board_price_list.html
+++ b/board_price_list.html
@@ -220,7 +220,7 @@
             </div>
 
             <!-- 頁籤。待處理 -->
-            <div class="order_info order_info_show">
+            <div class="order_info order_info_show list-table">
               <div class='boxsFull over1335'>
                 <div class='table-header'>
                   <p class='table-box15'>詢價編號</p>
